@@ -4,7 +4,6 @@ plugins{
 
 group pGroup
 
-sourceCompatibility = 1.8
 sourceSets.main{
     java.srcDir("src/")
     resources.srcDir("assets/")
@@ -16,6 +15,7 @@ repositories{
 }
 
 dependencies{
+    annotationProcessor 'com.github.Anuken:jabel:34e4c172e65b3928cd9eabe1993654ea79c409cd'
     implementation "com.github.Anuken.Mindustry:core:$pVer"
 }
 
@@ -74,3 +74,17 @@ task dexify(type: Jar){
 }
 
 task buildDex dependsOn "build", "dexify"
+
+tasks.withType(JavaCompile){
+    targetCompatibility = 8
+    sourceCompatibility = JavaVersion.VERSION_14
+    options.encoding = "UTF-8"
+    options.compilerArgs += ["-Xlint:deprecation"]
+    if(JavaVersion.current() != JavaVersion.VERSION_1_8){
+        options.compilerArgs.addAll(['--release', '8', '--enable-preview'])
+    }
+    compileJava.options.fork = true
+    doFirst{
+        options.compilerArgs = options.compilerArgs.findAll{it != '--enable-preview' }
+    }
+}
